--- a/templates/pages/hello.html
+++ b/templates/pages/hello.html
@@ -13,7 +13,7 @@
 
   <body>
     <button
-      class="text-lg text-red-500"
+      class="border border-red-100 text-lg text-blue-500"
       hx-target="this"
       hx-get="http://localhost:3000/click"
       hx-swap="innerHTML"
