--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,5 +1,8 @@
-{% extends "layouts/base.html" %} {% block title %}Index{% endblock %} {% block
-content %}
+{% extends "layouts/base.html" %}
+<!-- prettier-ignore -->
+{% block title %}Index{% endblock %}
+<!-- prettier-ignore -->
+{% block content %}
 <div class="bg-blue-300">
   <h1>Index</h1>
   <p>Hello, world!</p>
