--- a/templates/components/portfolio/page.html
+++ b/templates/components/portfolio/page.html
@@ -1,3 +1,3 @@
 <div class="grid h-screen snap-start place-content-center bg-green-300">
-  <div class="text-4xl">next page</div>
+  <div class="text-4xl">{{ title }}</div>
 </div>
