Finished title template. Added pictures. Next create page template.

--- a/templates/components/portfolio/page.html
+++ b/templates/components/portfolio/page.html
@@ -1,3 +1,18 @@
-<div class="grid h-screen snap-start place-content-center bg-green-300">
-  <div class="text-4xl">{{ title }}</div>
+<!--
+    title
+    is_github_project
+    github_repo_name
+    description
+    project_url
+    github_url
+    topics
+    workplace
+    start_date
+    end_date
+-->
+
+<div class="grid h-screen snap-start place-content-center">
+  <h2 class="text-4xl underline-offset-8">{{ title }}</h2>
+  <h3 class="text-xl">{{}}</h3>
+  <img src="{{ image_url }}" width="300" />
 </div>
