--- a/templates/components/portfolio/title.html
+++ b/templates/components/portfolio/title.html
@@ -1,10 +1,22 @@
-<div class="grid h-screen snap-start place-content-center">
+<div class="relative grid h-screen snap-start place-content-center">
   <a
     href="https://github.com/tieje/resume/blob/main/FrancisT_resume.pdf"
     target="_blank"
-    class="text-6xl"
+    class="text-center text-6xl md:text-left"
   >
-    Thomas Francis
+    <h1>Thomas Francis</h1>
   </a>
-  <div class="text-4xl">Portfolio special animation</div>
+  <h2 class="portfolio-word text-center text-4xl md:text-left"></h2>
+  <a
+    href="https://www.credly.com/badges/a74d35dd-36ff-4272-9d72-b1cf6a6360f5/public_url"
+    target="_blank"
+    class="absolute bottom-5 right-0 w-full md:bottom-10 md:right-10 md:w-fit"
+  >
+    <img
+      src="https://images.credly.com/size/680x680/images/b9feab85-1a43-4f6c-99a5-631b88d5461b/image.png"
+      class="mx-auto md:mx-0"
+      height="200"
+      width="200"
+    />
+  </a>
 </div>
