--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -4,7 +4,7 @@
 <!-- prettier-ignore -->
 {% block content %}
 
-<body class="h-screen overflow-hidden bg-blue-300">
+<body class="h-screen overflow-hidden">
   <div class="h-screen snap-y snap-mandatory overflow-y-scroll">
     <!-- prettier-ignore -->
     {% include "components/portfolio/title.html" %}
