--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,14 +1,18 @@
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <title>{% block title %}{% endblock %}</title>
-    <link href="/assets/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" />
+    <link rel="stylesheet" href="/assets/main.css" />
     <script
       src="https://unpkg.com/htmx.org@1.9.9"
       integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX"
       crossorigin="anonymous"
     ></script>
+
     {% block head %}{% endblock %}
   </head>
   {% block content %}{% endblock %}
