--- a/templates/components/portfolio/title.html
+++ b/templates/components/portfolio/title.html
@@ -1,4 +1,4 @@
-<div class="relative grid h-screen snap-start place-content-center">
+<div class="relative grid h-screen snap-start place-content-center gap-4">
   <a
     href="https://github.com/tieje/resume/blob/main/FrancisT_resume.pdf"
     target="_blank"
