--- a/templates/components/portfolio/page.html
+++ b/templates/components/portfolio/page.html
@@ -12,7 +12,75 @@
 -->
 
 <div class="grid h-screen snap-start place-content-center">
-  <h2 class="text-4xl underline-offset-8">{{ title }}</h2>
-  <h3 class="text-xl">{{}}</h3>
-  <img src="{{ image_url }}" width="300" />
+  <div class="md:w-[768px]">
+    <div class="grid gap-[24px]">
+      <h2
+        class="text-center text-4xl underline underline-offset-[24px] md:leading-[72px]"
+      >
+        {{ title }}
+      </h2>
+      <!-- prettier-ignore -->
+      <h3 class="pb-[16px] text-center text-xl">
+        {% if workplace != "" %}
+        {{ workplace }}
+        {% endif %}
+      </h3>
+      <!-- prettier-ignore -->
+    </div>
+    <div class="float-right mb-[12px] ml-[16px] grid w-[300px] gap-6">
+      <img class="" src="{{ image_url }}" width="300" />
+      <ul class="grid gap-4">
+        <!-- prettier-ignore -->
+        {% if start_date != "" %}
+        <li>Start: {{ start_date }}</li>
+        <!-- prettier-ignore -->
+        {% endif %}
+        <!-- prettier-ignore -->
+        {% if end_date != "" %}
+        <li>End: {{ end_date }}</li>
+        <!-- prettier-ignore -->
+        {% endif %}
+        <!-- prettier-ignore -->
+        {% if project_url != "" %}
+        <li>
+          <a
+            class="text-blue-300 underline underline-offset-4"
+            href="{{ project_url }}"
+            target="_blank"
+          >
+            See Project
+          </a>
+        </li>
+        <!-- prettier-ignore -->
+        {% endif %}
+        <!-- prettier-ignore -->
+        {% if github_url != "" %}
+        <li>
+          <a
+            class="text-blue-300 underline underline-offset-4"
+            href="{{ github_url }}"
+            target="_blank"
+          >
+            See Github
+          </a>
+        </li>
+        <!-- prettier-ignore -->
+        {% endif %}
+      </ul>
+    </div>
+    <p class="p-5 pt-0">{{ description }}</p>
+    <!-- prettier-ignore -->
+    {% if topics.len() != 0 %}
+    <ul class="flex flex-wrap gap-2 p-5 text-sm">
+      <!-- prettier-ignore -->
+      {% for topic in topics %}
+      <li class="border-2-white h-fit w-fit rounded-full border px-3 py-[2px]">
+        {{ topic }}
+      </li>
+      <!-- prettier-ignore -->
+      {% endfor %}
+    </ul>
+    <!-- prettier-ignore -->
+    {% endif %}
+  </div>
 </div>
