--- a/templates/components/portfolio/title.html
+++ b/templates/components/portfolio/title.html
@@ -1,4 +1,6 @@
-<div class="relative grid h-screen snap-start place-content-center gap-4">
+<div
+  class="relative grid h-screen min-h-[600px] snap-start place-content-center gap-4"
+>
   <a
     href="https://github.com/tieje/resume/blob/main/FrancisT_resume.pdf"
     target="_blank"
@@ -13,7 +15,7 @@
     class="absolute bottom-5 right-0 w-full md:bottom-10 md:right-10 md:w-fit"
   >
     <img
-      src="https://images.credly.com/size/680x680/images/b9feab85-1a43-4f6c-99a5-631b88d5461b/image.png"
+      src="/assets/aws-badge.png"
       class="mx-auto md:mx-0"
       height="200"
       width="200"
