--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" /> -->
     <link rel="stylesheet" href="/assets/main.css" />
-    <script
+    <!-- <script
       src="https://unpkg.com/htmx.org@1.9.9"
       integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
     {% block head %}{% endblock %}
   </head>
