--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -4,8 +4,8 @@
 <!-- prettier-ignore -->
 {% block content %}
 
-<body class="h-screen overflow-hidden">
-  <div class="h-screen snap-y snap-mandatory overflow-y-scroll">
+<body class="h-screen min-h-[600px] overflow-hidden">
+  <div class="h-screen min-h-[600px] snap-y snap-mandatory overflow-y-scroll">
     <!-- prettier-ignore -->
     {% include "components/portfolio/title.html" %}
     <!-- prettier-ignore -->
