--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Author: Thomas James Libiano Francis. Click on my name for more my resume and inquiries."
+    />
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <title>{% block title %}{% endblock %}</title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" /> -->
