--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -5,7 +5,9 @@
 {% block content %}
 
 <body class="h-screen min-h-[600px] overflow-hidden">
-  <div class="h-screen min-h-[600px] snap-y snap-mandatory overflow-y-scroll">
+  <div
+    class="h-screen min-h-[600px] overflow-y-scroll md:snap-y md:snap-mandatory"
+  >
     <!-- prettier-ignore -->
     {% include "components/portfolio/title.html" %}
     <!-- prettier-ignore -->
