--- a/templates/components/portfolio/title.html
+++ b/templates/components/portfolio/title.html
@@ -11,14 +11,14 @@
   <h2 class="portfolio-word text-center text-4xl md:text-left"></h2>
   <a
     href="https://www.credly.com/badges/a74d35dd-36ff-4272-9d72-b1cf6a6360f5/public_url"
+    alt="AWS certification verification"
     target="_blank"
-    class="absolute bottom-5 right-0 w-full md:bottom-10 md:right-10 md:w-fit"
+    class="absolute bottom-5 right-0 hidden w-full md:bottom-10 md:right-10 md:block md:w-fit"
   >
     <img
       src="/assets/aws-badge.png"
-      class="mx-auto md:mx-0"
-      height="200"
-      width="200"
+      alt="AWS Certified Developer - Associate badge"
+      class="mx-auto w-[190px] md:mx-0 md:w-[200px]"
     />
   </a>
 </div>
