work in progress

--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 <!-- prettier-ignore -->
-{% block title %}Portfolio{% endblock %}
+{% block title %}Portfolio - Thomas Francis{% endblock %}
 <!-- prettier-ignore -->
 {% block content %}
 
