blog infra and syntax highlighting achieved

--- a/templates/components/portfolio/page.html
+++ b/templates/components/portfolio/page.html
@@ -45,7 +45,7 @@
         {% if project_url != "" %}
         <li>
           <a
-            class="text-blue-300 underline underline-offset-4"
+            class="text-blue-300 hover:underline hover:underline-offset-4"
             href="{{ project_url }}"
             alt="See project in a separate page for {{ title }}"
             target="_blank"
@@ -66,7 +66,7 @@
         {% if github_url != "" %}
         <li>
           <a
-            class="text-blue-300 underline underline-offset-4"
+            class="text-blue-300 hover:underline hover:underline-offset-4"
             alt="See github in a separate page for {{ title }}"
             href="{{ github_url }}"
             target="_blank"
