--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -2,6 +2,15 @@
 <!-- prettier-ignore -->
 {% block title %}Portfolio - Thomas Francis{% endblock %}
 <!-- prettier-ignore -->
+{% block description %}
+<meta
+  name="description"
+  content="Author: Thomas James Libiano Francis. Click on my name for my resume and inquiries."
+/>
+<!-- prettier-ignore -->
+{% endblock %}
+
+<!-- prettier-ignore -->
 {% block content %}
 
 <body class="h-screen min-h-[600px] overflow-hidden">
