blog ready for mobile. Connected to portfolio. Wrote first post.

--- a/templates/components/portfolio/page.html
+++ b/templates/components/portfolio/page.html
@@ -1,6 +1,6 @@
 <div class="grid h-screen min-h-[600px] snap-start place-content-center">
   <div class="md:w-[768px]">
-    <div class="grid gap-[24px]">
+    <div class="grid gap-[24px] px-5">
       <a
         class="text-center text-lg underline underline-offset-8 md:text-4xl md:leading-[72px] md:underline-offset-[24px]"
         href="#{{ link }}"
