--- a/templates/components/portfolio/title.html
+++ b/templates/components/portfolio/title.html
@@ -5,6 +5,7 @@
     href="https://github.com/tieje/resume/blob/main/FrancisT_resume.pdf"
     target="_blank"
     class="text-center text-6xl md:text-left"
+    alt="Click on my name for my resume."
   >
     <h1>Thomas Francis</h1>
   </a>
@@ -13,12 +14,20 @@
     href="https://www.credly.com/badges/a74d35dd-36ff-4272-9d72-b1cf6a6360f5/public_url"
     alt="AWS certification verification"
     target="_blank"
-    class="absolute bottom-5 right-0 hidden w-full md:bottom-10 md:right-10 md:block md:w-fit"
+    class="absolute hidden w-full md:bottom-10 md:right-10 md:block md:w-fit"
   >
     <img
       src="/assets/aws-badge.png"
       alt="AWS Certified Developer - Associate badge"
       class="mx-auto w-[190px] md:mx-0 md:w-[200px]"
     />
+  </a>
+  <a
+    href="/entries"
+    alt="Blog"
+    class="absolute right-10 top-10 text-xl text-blue-300 hover:underline hover:underline-offset-4 md:right-[110px] md:top-10 md:block md:text-2xl"
+    target="_blank"
+  >
+    Blog
   </a>
 </div>
