--- a/templates/pages/blog_entry.html
+++ b/templates/pages/blog_entry.html
@@ -6,6 +6,7 @@
 <meta name="description" content="{{ tags }}" />
 <link href="/assets/prism.css" rel="stylesheet" />
 <script src="/assets/prism.js"></script>
+<link href="/assets/blog.css" rel="stylesheet" />
 <!-- prettier-ignore -->
 {% endblock %}
 
