--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -5,7 +5,7 @@
 {% block description %}
 <meta
   name="description"
-  content="Author: Thomas James Libiano Francis. Click on my name for my resume and inquiries."
+  content="Author: Thomas James Libiano Francis. Click on my name for my resume."
 />
 <!-- prettier-ignore -->
 {% endblock %}
